@@ -21,6 +21,7 @@ Changes in 3.1.3 --
   - new Clear music view button and menu action (wish #1235)
 * Bug fixes:
   - fixed #1311 "NameError: name 'imp' is not defined" when importing
+  - fixed search of generated files on macOS for some Unicode file names
 
 
 Changes in 3.1.2 -- Easter 2020
